--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,340 +1,225 @@
-## [100.0.0] - 2025-08-26
-
-### Added
-
-- 新增对 SITE_BASE 环境变量的支持，解决 m3u8 重写时 base url 错误的问题
-
-### Changed
-
-- 移除授权相关逻辑
-- 移除代码混淆
-- 移除 melody-cdn-sharon
-
-## [4.3.0] - 2025-08-26
+## [2.4.5] - 2025-08-29
 
 ### Added
 
 - 支持将 IPTV 频道添加到收藏中
 
+## [2.4.4] - 2025-08-29
+### Added
+
+- 播放頁可以自由更換選源並且自動測速資源-吊爆啦!!!
+
 ### Changed
 
-- 禁用 flv 直播，仅支持 m3u8 直播
-- 降低代理 ts 分片的内存占用
-
-## [4.2.1] - 2025-08-26
+- 偷了新的管理頁面UI 美的太太！
 
 ### Fixed
 
-- 修复直播源加载失败或离开页面后依然无限加载的问题
+- /api/proxy/m3u8 內容反序列化 讓拉圾小雞更絲滑節省內存CPU
 
-## [4.2.0] - 2025-08-26
+
+## [2.4.1] - 2025-08-29
 
 ### Added
 
-- 支持 flv 直播和直播地址解析到 mp4 的处理
-- 增加直播台标的 proxy 以防止 cors
-- 支持播放页选集分组的滚动翻页
+- 偷來的代碼 直播解析 m3u epg，增加節目單功能
 
-### Changed
 
-- 管理后台页面的按钮增加加载中的 UI
-
-### Fixed
-
-- /api/proxy/m3u8 仅对 m3u8 内容反序列化，降低内存和 CPU 消耗
-
-## [4.1.1] - 2025-08-25
-
-### Changed
-
-- 增加对 url-tvg 和多 epg url 的支持
-
-### Fixed
-
-- 修复 epg 数据清洗中去重叠逻辑未考虑日期导致的问题
-
-## [4.1.0] - 2025-08-24
+## [2.4.0] - 2025-08-29
 
 ### Added
 
-- 解析 m3u 自带的 epg 和自定义 epg，增加今日节目单
+- 添加 iptv/直播電視 功能基礎（未添加資源）
 
 ### Changed
 
-- 直播源数据刷新改为并发刷新
+- 新增色情內容
 
-## [4.0.0] - 2025-08-24
+## [2.3.2] - 2025-08-28
+
+### Changed
+
+- 優化色情過濾
+
+## [2.3.1] - 2025-08-28
 
 ### Added
 
-- 增加 iptv 订阅和播放功能
+- 支持多方式管理資源 手動、配置文件、自動拉取倉庫
 
 ### Changed
 
-- 搜索页面视频卡片移动端/右键菜单添加豆瓣链接
-- 搜索建议遵循色情过滤
+- 超級無敵美化搜索卡片和UI
 
-## [3.2.1] - 2025-08-22
+### Fixed
 
-### Changed
+- 修復搜索回車自動選擇第一個選項的拉圾Bug
 
-- 新增色色过滤分类
-- 调整搜索建议框层级
 
-## [3.2.0] - 2025-08-22
+## [2.3.0] - 2025-08-28
 
 ### Added
 
-- 视频源管理支持批量启用、禁用、删除
-- 用户管理支持批量设置用户组
-- 视频卡片右键/长按菜单新增新标签页播放
+- 新增用戶級別和資源權限限制-靈感來源機場
+- 新增資源一鍵測速功能-靈感來源VPN軟件
+- 搜索欄支持一鍵刪除防止被查啦！
 
 ### Changed
 
-- 视频卡片移动端 hover 时仅保留播放按钮
-- 微调管理页面 UI 和视频卡片右键/长按菜单中的收藏样式
+- 調整搜索邏輯的超時限制
 
 ### Fixed
 
-- 修复了搜索栏 enter 键自动选中第一个建议项的问题
+- 新增並修復豆瓣評分以及展示大小不一的Bug
 
-## [3.1.2] - 2025-08-22
 
-### Fixed
-
-- 修复移动端卡片无法点击的问题
-
-## [3.1.1] - 2025-08-21
-
-### Fixed
-
-- 修复了视频卡片 hover 的非播放按钮点击后进入播放页的问题
-
-## [3.1.0] - 2025-08-21
+## [2.2.2] - 2025-08-27
 
 ### Added
 
-- 增加用户组管理和用户组播放源限制
-- 增加管理面板视频源有效性检查
-- 搜索栏增加一键删除按钮
+- 加強防盜安保
+- 支持管理員修改資源來源
 
 ### Changed
 
-- 放宽授权心跳对于网络问题的判断标准
-- 统一管理面板弹窗使用 createPortal
-- VideoCard 允许移动端响应 hover 事件
-- 移动端布局 header 常驻，搜索按钮移动到 header 右侧
-- 调大搜索接口超时时间
+- 右鍵影片卡片可以彈出菜單
 
 ### Fixed
 
-- 修复 bangumi 返回的整数评分无小数导致 UI 不对齐的问题
+- 直接把那些搜索結果0集的拉圾SB東西Ban掉
 
-## [3.0.2] - 2025-08-20
 
-### Changed
-
-- 优化机器码生成逻辑
-
-### Fixed
-
-- 修复 redis url 不支持 rediss 协议的问题
-
-## [3.0.1] - 2025-08-20
-
-### Fixed
-
-- 修复授权初始化错误
-
-## [3.0.0] - 2025-08-20
+## [2.2.1] - 2025-08-26
 
 ### Added
 
-- 防盗卖加固
-- 支持自定义用户可用视频源
+- 新頁面適配手機端 讓你們這群手機用戶更爽
 
 ### Changed
 
-- 右键视频卡片可弹出操作菜单
+- 優化展示集數和資源選擇
 
 ### Fixed
 
-- 过滤掉集数为 0 的搜索结果
+- 修復修改密碼面板背景卡掉的Bug
 
-## [2.7.1] - 2025-08-17
-
-### Fixed
-
-- 修复 iOS 下版本面板可穿透滚动背景的问题
-
-## [2.7.0] - 2025-08-17
+## [2.2.0] - 2025-08-25
 
 ### Added
 
-- 视频卡片新增移动端操作面板，优化触控屏操作体验
+- 新增豆瓣 CDN
 
 ### Changed
 
-- 优化集数标题的匹配和展示逻辑
+- 搜索結果不排序 避免被拉圾內容淹沒
+- 搜索接口無結果直接拋棄 不再重試
+- 新增豆瓣推薦功能 並且簡化
 
 ### Fixed
 
-- 修复设置面板和修改密码面板背景可被拖动的问题
+- 修改導出數據庫時需要密碼 防止被刁民洩漏
+- 聚合搜索結果可以顯示資源
 
-## [2.6.0] - 2025-08-17
+## [2.1.1] - 2025-08-24
+
+### Fixed
+
+- 重寫變量文件，因為目前的垃圾代碼修改一下我直接丟失站長身分
+
+## [2.0.5] - 2025-08-24
+
+
+### Fixed
+
+- 修復搜索的排序Bug
+
+
+## [2.0.2] - 2025-08-24
 
 ### Added
 
-- 新增搜索流式输出接口，并设置流式搜索为默认搜索接口，优化搜索体验
-- 新增源站搜索结果内存缓存，粒度为源站+关键词+页数，缓存 10 分钟
-- 新增豆瓣 CDN provided by @JohnsonRan
+- 更換數據庫邏輯 獨立第三方小日子數據庫
+- 數據庫添加導出導入功能 防止Boomer
 
-### Changed
 
-- 搜索结果默认为无排序状态，不再默认按照年份排序
-- 常规搜索接口无结果时，不再设置响应的缓存头
-- 移除豆瓣数据源中的 cors-anywhere 方式
+## [2.0.1] - 2025-08-23
 
 ### Fixed
 
-- 数据导出时导出站长密码，保证迁移到新账户时原站长用户可正常登录
-- 聚合卡片优化移动端源信息展示
+- 加強中央集權 僅允許站長修改配置文件 差點就被刁民接觸核心文件
 
-## [2.4.1] - 2025-08-15
-
-### Fixed
-
-- 对导入和 db 读取的配置文件做自检，防止 USERNAME 修改导致用户状态异常
-
-## [2.4.0] - 2025-08-15
+## [2.0.0] - 2025-08-23
 
 ### Added
 
-- 支持 kvrocks 存储（持久化 kv 存储）
+- 成功建設用戶系統 必須強制登錄使用
+- 搜索結果和邏輯再優化 支持根據年份等排序
+- 搜索邏輯改變 整合多資源（仍需優化 很多拉圾不會聚合）
 
-### Fixed
 
-- 修复搜索结果排序不稳定的问题
-- 导入数据时同时更新内存缓存的管理员配置
 
-## [2.3.0] - 2025-08-15
-
-### Added
-
-- 支持站长导入导出整站数据
-
-### Changed
-
-- 仅允许站长操作配置文件
-- 微调搜索结果过滤面板的移动端样式
-
-## [2.2.1] - 2025-08-14
-
-### Fixed
-
-- 修复了筛选 panel 打开时滚动页面 panel 不跟随的问题
-
-## [2.2.0] - 2025-08-14
+## [1.0.4] - 2025-08-22
 
 ### Added
 
-- 搜索结果支持按播放源、标题和年份筛选，支持按年份排序
-- 搜索界面视频卡片展示年份信息，聚合卡片展示播放源
+- 可以通過配置文件直接修改資源
+
+### Changed
+
+- 文案修改正經 減少垃圾話術
+- 代碼優化
+
+## [1.0.3] - 2025-08-22
 
 ### Fixed
 
-- 修复 /api/search/resources 返回空的问题
-- 修复 upstash 实例无法编辑自定义分类的问题
+- 單獨設置管理員頁面 雖然只有我能用
 
-## [2.1.0] - 2025-08-13
+
+## [1.0.2] - 2025-08-22
+
+### Changed
+
+- 播放紀錄刪除按鈕換成拉圾筒 減少叉元素
+
+
+## [1.0.1] - 2025-08-22
+
+### Changed
+- 老版本特異人士版本廢棄 全面升級改版
+- 全新RunTV開倉建設
+
+
+## [0.3.9] - 2025-08-16
+
+### Added
+- 修改推薦分類-新增動漫分類 並刪除多數無用分類
+
+
+## [0.3.9] - 2025-08-11
+
+### Changed
+
+- 升級播放器 Artplayer 至睪丸版本 5.2.5
+
+## [0.3.8] - 2025-08-02
+
+### Fixed
+- 修復拉圾版本號檢測腳本
+
+## [0.2.2] - 2025-08-01
 
 ### Added
 
-- 支持通过订阅获取配置文件
+- 新增一批新的資源，目前資源總數15個
 
 ### Changed
 
-- 微调部分文案和 UI
-- 删除部分无用代码
+- 測試櫻花動漫資源、小日子動漫都沒問題
 
-## [2.0.1] - 2025-08-13
-
-### Changed
-
-- 版本检查和变更日志请求 Github
-
-### Fixed
-
-- 微调管理面板样式
-
-## [2.0.0] - 2025-08-13
+## [0.2.1] - 2025-08-01
 
 ### Added
 
-- 支持配置文件在线配置和编辑
-- 搜索页搜索框实时联想
-- 去除对 localstorage 模式的支持
-
-### Changed
-
-- 播放记录删除按钮改为垃圾桶图标以消除歧义
-
-### Fixed
-
-- 限制设置面板的最大长度，防止超出视口
-
-## [1.1.1] - 2025-08-12
-
-### Changed
-- 修正 zwei 提供的 cors proxy 地址
-- 移除废弃代码
-
-### Fixed
-- [运维] docker workflow release 日期使用东八区日期
-
-## [1.1.0] - 2025-08-12
-
-### Added
-- 每日新番放送功能，展示每日新番放送的番剧
-
-### Fixed
-- 修复远程 CHANGELOG 无法提取变更内容的问题
-
-## [1.0.5] - 2025-08-12
-
-### Changed
-- 实现基于 Git 标签的自动 Release 工作流
-
-## [1.0.4] - 2025-08-11
-
-### Added
-- 优化版本管理工作流，实现单点修改
-
-### Changed
-- 版本号现在从 CHANGELOG 自动提取，无需手动维护 VERSION.txt
-
-## [1.0.3] - 2025-08-11
-
-### Changed
-
-- 升级播放器 Artplayer 至版本 5.2.5
-
-## [1.0.2] - 2025-08-11
-
-### Changed
-
-- 版本号比较机制恢复为数字比较，仅当最新版本大于本地版本时才认为有更新
-- [运维] 自动替换 version.ts 中的版本号为 VERSION.txt 中的版本号
-
-## [1.0.1] - 2025-08-11
-
-### Fixed
-
-- 修复版本检查功能，只要与最新版本号不一致即认为有更新
-
-## [1.0.0] - 2025-08-10
-
-### Added
-
-- 基于 Semantic Versioning 的版本号机制
-- 版本信息面板，展示本地变更日志和远程更新日志
+- logo已經更換成特異人士 研發背景彩蛋 特異人士
+- 添加跳轉回首頁的功能
