--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+## [2.5.1] - 2025-08-30
+
+### Added
+
+- 細增肝帝日誌
+- 多用戶全設備完美同步瀏覽記錄
+- 主頁可以直接繼續播放之前看過的內容 太方便了
+
 ## [2.4.5] - 2025-08-29
 
 ### Added
@@ -223,3 +231,4 @@
 
 - logo已經更換成特異人士 研發背景彩蛋 特異人士
 - 添加跳轉回首頁的功能
+
